--- a/src/assets/styles/components/activity.scss
+++ b/src/assets/styles/components/activity.scss
@@ -18,7 +18,8 @@
 }
 
 .ai-grey-spin {
-	border-color: rgba(189, 195, 199, 0.5) rgba(189, 195, 199, 0.5) #bdc3c7 #bdc3c7;
+	border-color: rgba(189, 195, 199, 0.5) rgba(189, 195, 199, 0.5) #bdc3c7
+		#bdc3c7;
 }
 
 .ai-grey-parent > * {
