--- a/src/assets/styles/components/shell.scss
+++ b/src/assets/styles/components/shell.scss
@@ -1,5 +1,6 @@
 html {
-	background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)), no-repeat center center url("/assets/imgs/app-bg.min.jpg");
+	background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)),
+		no-repeat center center url("/assets/imgs/app-bg.min.jpg");
 	background-size: cover;
 }
 
