--- a/src/app/areas/not-found/not-found.component.html
+++ b/src/app/areas/not-found/not-found.component.html
@@ -3,7 +3,7 @@
 	<p><strong>Sorry!</strong> The page you are looking for cannot be found.</p>
 	<i class="fa fa-blind fa-5x" aria-hidden="true"></i>
 	<br />
-	<a routerLink=""><button class="btn btn-outline-info my-2 my-sm-0">
-			Home
-		</button></a>
+	<a routerLink=""
+		><button class="btn btn-outline-info my-2 my-sm-0">Home</button></a
+	>
 </div>
