--- a/src/app/areas/user-profile/user-profile.component.html
+++ b/src/app/areas/user-profile/user-profile.component.html
@@ -22,13 +22,7 @@
 		<div class="card mt-3">
 			<ul class="list-group list-group-flush">
 				<li
-					class="
-						list-group-item
-						d-flex
-						justify-content-between
-						align-items-center
-						flex-wrap
-					"
+					class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
 				>
 					<h6 class="mb-0 text-dark">
 						<svg
